# shopping-cart-product-catalog

./: .clinerules  .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.local  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/issues/: 2026-03-17-multiarch-workflow-pin.md  2026-03-18-rate-limit-missing.md
docs/testing/: README.md
docs/troubleshooting/: README.md
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml
memory-bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/product_catalog/: __init__.py  auth.py  config.py  database.py  events.py  main.py  messaging.py  models.py  schemas.py  security.py
src/product_catalog/routers/: __init__.py  health.py  products.py
src/shopping_cart_product_catalog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_auth.py  test_auth_integration.py  test_security.py  test_security_middleware.py
